--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    text-align: center;
     
 }
 
 body{
     font-family: "Poppins", sans-serif;
+}
+
+img{
+    width: 80px;
+}
+
+h1{
+    color: rgb(107, 107, 107);
+    text-transform: uppercase;
+    margin-top: 30px;
 }
